@@ -1,22 +1,19 @@
 
-function IsNumeric(sText)
-{
+function IsNumeric(sText) {
   
   if(sText=='') return false;
   
-   var ValidChars = "0123456789.";
-   var IsNumber=true;
-   var Char;
- 
-   for (i = 0; i < sText.length && IsNumber == true; i++) 
-      { 
-      Char = sText.charAt(i); 
-      if (ValidChars.indexOf(Char) == -1) 
-         {
-         IsNumber = false;
-         }
-      }
-   return IsNumber;
+  var ValidChars = "0123456789.";
+  var IsNumber=true;
+  var Char;
+  
+  for (i = 0; i < sText.length && IsNumber == true; i++)  { 
+    Char = sText.charAt(i); 
+    if (ValidChars.indexOf(Char) == -1) {
+      IsNumber = false;
+    }
+  }
+  return IsNumber;
 }
 
 function countAttributes(obj) {
