@@ -19,7 +19,7 @@
       <Description>
         <em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
         <em:minVersion>1.5</em:minVersion>
-        <em:maxVersion>2.0.0.*</em:maxVersion>
+        <em:maxVersion>3.0.0.*</em:maxVersion>
         <em:updateLink>http://www.firephp.org/DownloadRelease/FirePHP-FirefoxExtension-%ReleaseVersion%.xpi</em:updateLink>
       </Description>
     </em:targetApplication>
