@@ -1,3 +1,8 @@
+	
+	- Updated default processor to render exception stacks without wrapping the filenames
+	- Added updateKey to install.rdf
+	- Updated browser version to support FF3
+  - Removed component used to add to User-Agent request header as we can do this directly via httpChannel
 
 2008-04-16 - Release Version: 0.0.6.14
 	
